src/App.css
/* Navigation styling */
nav {
  border-bottom-style: solid;
  border-bottom-color: #8A8A8A;
  border-bottom-width: 1px
}
nav ul li {
  display: inline;
  color: #8A8A8A;
  font-size: 22px;
  font-family: 'Roboto', sans-serif;
  padding: 0 1.5%;
}
nav ul li p {
  display: inline
}
nav ul li:first-child {
  border-right: 1px solid #8A8A8A;
}
nav ul li a {
  text-decoration: none;
  color: #8A8A8A;
}
.active {
  color: #393939;
}

/* Search field inside Search.js */
input {
  margin: 3% 30%;
  font-size: 30px;
  font-family: 'Roboto', sans-serif;
  outline: 0;
  width: 50%;
  border-width: 0 0 1px 0;
  border-color: #CCCCCC;
  padding: 1% 0
}
input:focus {
  border-color: #8A8A8A
}
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #CCCCCC;
}

/* format of search results */
.wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 1% 0
}
.box {
  position: relative;
  display: block;
  margin: 1%;
}
.box img {
  display: inline-block;
  width: 20vw;
  height: 20vw;

  border: 1px outset transparent;
}
.box .redheart {
  position: absolute;
  right: 5%;
  bottom: 5%;
  font-size:40px;
  opacity: 0
}
.box .favheart {
  position: absolute;
  right: 5%;
  bottom: 5%;
  font-size:40px;
  opacity: 1;
  color:#ff0000
}

.box img:hover ~ .redheart {
  color:#ff0000;
  opacity: 0.5;
}
.box .redheart:hover {
  color:#ff0000;
  opacity: 0.5;
}
/* UI feedback to user */
.noresult {
  text-align:center;
}

